# tutorial-of-data-assimilation-using-lorenz-63-model

./: README.md  docker-compose.yml
docker/pytorch_cpu/: Dockerfile  pyproject.toml
docker/pytorch_gpu/: Dockerfile  Pipfile
docs/data_assimilation/: README.md
docs/lorenz63_model/: README.md
python/notebooks/data_assimilation/: calc_lyapunov_exponent.ipynb
python/notebooks/data_assimilation/enkf_po/: enkf_po.ipynb
python/notebooks/lorenz63_model/: lorenz63_model.ipynb
python/src/data_assimilation/enkf/: enkf.py
python/src/data_assimilation/enkf/utils/: enkf_config.py
python/src/lorenz63_model/: lorenz63_model.py
python/src/lorenz63_model/utils/: lorenz63_config.py  time_integration.py
python/src/utils/: random_seed_helper.py
