[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.25.1"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
tqdm = "^4.65.0"
pyyaml = "^6.0.1"
mlflow = "^2.5.0"
hydra-core = "^1.3.2"
xarray = "^2023.7.0"
lmdb = "^1.4.1"
tensorboardx = "^2.6.2"
wandb = "^0.15.8"
pillow = "^10.0.0"
opencv-python = "^4.8.0.74"
torch = {version = "1.12.1", source = "cpu"}
torchvision = {version = "0.13.1", source = "cpu"}


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
ipykernel = "^6.25.0"
matplotlib = "^3.7.2"
jupyterlab = "3.6.5"
python-lsp-server = "^1.7.4"
jupyter-lsp = "^2.2.0"
jupyterlab-lsp = "^4.2.0"
ipython = "^8.14.0"
jupyterlab-code-formatter = "^2.2.1"
ipywidgets = "^8.0.7"
seaborn = "^0.12.2"
lckr-jupyterlab-variableinspector = "^3.0.9"


[[tool.poetry.source]]
name = "cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
